add fortify setup